Added Home Div Stripe

--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@
 
     <section id = "home">
 
-      <p class = "home-title">
-        GymSearch
-      </p>
+      <div class = "home-stripe">
 
-      <p class = "home-subtitle">
-        Fitness, for you
-      </p>
+        <p class = "home-title">
+          GymSearch
+        </p>
+
+        <p class = "home-subtitle">
+          Fitness, for you
+        </p>
+
+      </div>
 
       <div id = "map"></div>
 
