Added Gradient Stripe

--- a/index.html
+++ b/index.html
@@ -32,17 +32,15 @@
 
     <section id = "home">
 
-      <div class = "home-stripe">
+      <div class = "home-stripe"></div>
 
-        <p class = "home-title">
-          GymSearch
-        </p>
+      <p class = "home-title">
+        GymSearch
+      </p>
 
-        <p class = "home-subtitle">
-          Fitness, for you
-        </p>
-
-      </div>
+      <p class = "home-subtitle">
+        Fitness, for you
+      </p>
 
       <div id = "map"></div>
 
