Bug Patch with Google Maps
 - Removed a overflow definition which caused the google map container to be compressed to the left

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     </nav>
 
-    <section id = "home">
+    <div id = "home" class = "container">
 
       <div class = "home-stripe"></div>
 
@@ -44,7 +44,13 @@
 
       <div id = "map"></div>
 
-    </section>
+    </div>
+
+    <div id = "about" class = "container">
+
+
+
+    </div>
 
   </body>
 
