Added Customer Quote Section in About

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
 
       <div class = "about-stripe"></div>
 
+      <p class = "about-quote">
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+      </p>
+
+      <p class = "about-author">
+        - Some Customer
+      </p>
+
+      <p class = "about-title">
+        Who are we?
+      </p>
+
     </div>
 
   </body>
