Created Blank Templating Files

--- a/index.html
+++ b/index.html
@@ -53,19 +53,23 @@
 
     <div id = "about" class = "container">
 
-      <div class = "about-stripe"></div>
+      <div class = "row">
 
-      <p class = "about-quote">
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-      </p>
+        <div class = "about-stripe"></div>
 
-      <p class = "about-author">
-        - Some Customer
-      </p>
+        <p class = "about-quote">
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+        </p>
 
-      <p class = "about-title">
-        Who are we?
-      </p>
+        <p class = "about-author">
+          - Some Customer
+        </p>
+
+        <p class = "about-title">
+          Who are we?
+        </p>
+      
+      </div>
 
     </div>
 
