Added Custom Bi-Lateral Styling to Auth Form

--- a/html/auth.html
+++ b/html/auth.html
@@ -26,7 +26,7 @@
 
       <div class="row auth-form">
       
-        <div class="col-md-6 light-form">
+        <div class="col-md-6 dark-form">
           <h3> Login </h3>
           <form id = "login-form">
             <div class="form-group">
@@ -38,11 +38,11 @@
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
             <br>
-            <button type="submit" id="login" class="btn btn-primary">Login</button>
+            <button type="submit" id="login" class="btn btn-primary light-btn">Login</button>
           </form>
         </div>
 
-        <div class="col-md-6 dark-form">
+        <div class="col-md-6 light-form">
           <h3> Register </h3>
           <form id = "signup-form">
             <div class="form-group">
@@ -54,7 +54,7 @@
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
               <small id="emailHelp" class="form-text text-muted">Your password must be longer than 8 characters.</small>
             </div>
-            <button type="submit" id="register" class="btn btn-primary">Register</button>
+            <button type="submit" id="register" class="btn btn-primary dark-btn">Register</button>
           </form>
         </div>
 
