--- a/html/auth.html
+++ b/html/auth.html
@@ -18,6 +18,14 @@
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
 
+    <!-- Required firebase dependency scripts -->
+    <script defer src = "https://www.gstatic.com/firebasejs/7.8.0/firebase-app.js"></script>
+    <script defer src = "https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
+
+    <!-- Custom firebase login scripts -->
+    <script defer type = "text/javascript" src = "src/js/firebase-init.js"></script>
+    <script defer type = "text/javascript" src = "src/js/auth.js"></script>
+
   </head>
 
   <body>
