--- a/html/auth.html
+++ b/html/auth.html
@@ -23,8 +23,8 @@
     <script defer src = "https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
 
     <!-- Custom firebase login scripts -->
-    <script defer type = "text/javascript" src = "src/js/firebase-init.js"></script>
-    <script defer type = "text/javascript" src = "src/js/auth.js"></script>
+    <script defer type = "text/javascript" src = "./js/firebase-init.js"></script>
+    <script defer type = "text/javascript" src = "./js/auth.js"></script>
 
   </head>
 
